# Lantern

./: .gitignore  README.md  build.gradle  settings.gradle
doc/: SM-G988U.md  SM-N975F.md  motorola.md  nubia.md  onelpus.md  overview.md  phone_record.md  pixel.md  remark.md  xiaomi.md
lantern/: build.gradle
lantern/src/main/: AndroidManifest.xml
lantern/src/main/cpp/: CMakeLists.txt  lantern.cpp  lantern.map.txt  lantern_android.spp  lantern_inner.spp  lantern_java.spp  lantern_log.spp  lantern_maps.spp  lantern_offset.spp  lantern_plthook.spp  lantern_sig.spp  lantern_xml.spp
lantern/src/main/cpp/include/: lantern.h
lantern/src/main/java/com/amap/android/lantern/: lantern.java
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: CMakeLists.txt  lantern_jni.cpp
sample/src/main/java/com/amap/android/lantern/sample/: Lantern.java  SampleActivity.java  SampleApplication.java
sample/src/main/res/layout/: activity_sample.xml
sample/src/main/res/values/: strings.xml  themes.xml
