cmake_minimum_required(VERSION 3.18.1)
project(lantern)

find_package(bytehook REQUIRED CONFIG)
find_package(xdl REQUIRED CONFIG)

file(GLOB SRC *.cpp)
add_library(lantern SHARED ${SRC})
target_compile_features(lantern PUBLIC cxx_std_11)
target_include_directories(lantern PUBLIC include .)
target_link_libraries(lantern log)
target_link_libraries(lantern xdl::xdl)
target_link_libraries(lantern bytehook::bytehook)

if(USEASAN)
target_compile_options(lantern PUBLIC -fsanitize=address -fno-omit-frame-pointer)
target_link_options(lantern PUBLIC -fsanitize=address)
else()
target_compile_options(lantern PUBLIC -flto -faddrsig -ffunction-sections -fdata-sections)
target_link_options(lantern PUBLIC -flto -Wl,--exclude-libs,ALL -Wl,--gc-sections -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/lantern.map.txt)
endif()
